--- a/app1/index.html
+++ b/app1/index.html
@@ -8,14 +8,14 @@
   </head>
 
   <body>
-    <h1>Chat 2</h1>
-    <section class="register-container">
+    <h1>Chat 1</h1>
+    <section class="register-container" style="display: block">
       <form>
         <input type="text" id="username" placeholder="Enter your username" />
         <button type="click" id="register">Register</button>
       </form>
     </section>
-    <section>
+    <section class="send-container" style="display: none">
       <form>
         <input type="text" id="message" placeholder="Send a message" />
         <button type="click" id="send">Send</button>
